<resources>
    <string name="app_name">MMO Catch Record</string>
    <string name="back">Back</string>
    <string name="cym">CYM</string>
    <string name="eng">ENG</string>
    <string name="important">Important</string>
    <string name="home_banner_text">The Catch Records service will be available from 1 October 2026.</string>
    <string name="your_catch_records">Your catch records</string>
    <string name="create_catch_record">Create a new catch record</string>
...
